# snac

./: .gitignore  Make.vars  Makefile.am  Stanford-branch.txt  boot.sh  configure.ac
apps/: Makefile.am
apps/audit/: Makefile.am  audit.cc  meta.json  meta.xml
apps/captiveportal/: Makefile.am  captiveportal.py  meta.json  meta.xml
apps/captiveportal/static_www/: cp.js  default.css
apps/configuration/: Makefile.am  __init__.py  configuration.cc  configuration.hh  csimple_config.cc  csimple_config.hh  meta.json  meta.xml  properties.cc  properties.hh  properties.py  simple_config.py  simple_configws.py
apps/coreui/: Makefile.am  asyncwebserviceclient.py  authui.py  coreui.py  meta.json  meta.xml  monitorsui.py  template_utils.py
apps/ctlflood/: Makefile.am  ctlflood.cc
apps/dbexplorer/: Makefile.am  dbexplorerui.py  meta.json
apps/debug/: Makefile.am  malloc_monitor.cc  meta.json
apps/default_switch_approval/: Makefile.am  default_switch_approval.cc  default_switch_approval.hh  meta.json  meta.xml
apps/dhcp/: Makefile.am  config.py  manager.py  meta.json
apps/directory/: Makefile.am  cidr_group_cache.py  dir_utils.py  directory.cc  directory.hh  directory.i  directorymanager.cc  directorymanager.hh  directorymanager.py  directorymanagerws.py  dirmanager.i  discovered_directory.py  dm_ws_bindings.py  dm_ws_groups.py  dm_ws_location.py  dm_ws_switch.py  dm_ws_user.py  group_change_event.cc  group_change_event.hh  group_event.cc  group_event.hh  location_del_event.cc  location_del_event.hh  meta.json  meta.xml  netinfo_mod_event.cc  netinfo_mod_event.hh  netinfo_mod_event.i  principal_event.cc  principal_event.hh  principal_search.py  principal_types.cc  principal_types.hh  pydirmanager.cc  pydirmanager.hh  pyprincipal_types.cc  pyprincipal_types.hh  query.py  simple_directory.py
apps/directory_ldap/: Makefile.am  ldap_dir_factory.py  ldap_proxy.cc  ldap_proxy.hh  ldap_proxy.i  meta.json  pyldap_proxy.cc  pyldap_proxy.hh  pytestldap_proxy.py  testldap_proxy.cc
apps/directory_nox/: Makefile.am  default_groups.py  meta.json  meta.xml  nox_directory.py  schema_migration_plugin.py  testauthui.py
apps/dwh/: Makefile.am  api.py  dwh.cc  meta.json
apps/exttests/: Makefile.am  meta.json  pytests.hh  pytests.i  tests.cc  tests.hh  unittest.py
apps/exttests/pyunittests/: Makefile.am  ndb_stress.py  ndb_test.py  notifier_test.py  nox_directory_test.py  (+1 more)
apps/failover/: INSTALL  Makefile.am  __init__.py  constraints.xml  failover.conf  ha.cf  meta.json  meta.xml  pyreplicator.cc  pyreplicator.hh  replicate  replicator.cc  replicator.hh  replicator.i  replicatorws.py  resource.xml
apps/http_redirector/: Makefile.am  http_redirector.cc  http_redirector.hh  http_redirector_proxy.cc  http_redirector_proxy.hh  meta.json  meta.xml  pyhttp_redirector.i  redirected_flow_cache.cc  redirected_flow_cache.hh
apps/local_config/: Makefile.am  interface_change_event.py  local_config.py  local_configws.py  meta.json  meta.xml
apps/loki/: ScopeGuard.h
apps/miscws/: Makefile.am  eventws.py  graphable.css  hosttrackerws.py  logws.py  meta.json  movable_css.js  noxgraph.py  noxinfows.py  pki.py  policyws.py  principal_ws_test.py  protocolsws.py  topograph.py
apps/ndb/: Makefile.am  api.py  cachendb.cc  cachendb.hh  lockndb.hh  masterndb.cc  masterndb.hh  meta.json  meta.xml  ndb.cc  ndb.hh  ndb.i  ndb_utils.py  ndbcomponent.py  pyndb.cc  pyndb.hh  sqlitendb.cc  sqlitendb.hh
apps/notification/: Makefile.am  meta.json  meta.xml  notifier.py  ruleformat.txt  smtp.py  syslog.py  twitter.py
apps/pf/: Makefile.am  __init__.py  meta.json  meta.xml  p0f-sigs.cc  p0f-sigs.hh  p0f.fp  p0fa.fp  pf-match.hh  pf-sigs.cc  pf-sigs.hh  pf.cc  pf.hh  pf.i  pf.os  pfws.py  pypf.cc  pypf.hh
apps/policy/: current_policy.py  principals.py
apps/redirproxy/: Makefile.am  meta.json  meta.xml  redirproxy.py
apps/restracker/: Makefile.am  meta.json  pyrestracker.i  pyrestrackerws.py  restracker.cc  restracker.hh  restracker_proxy.cc  restracker_proxy.hh  restrackerui.py
apps/runtime_stats/: pyruntime_stats.py  runtime-stats.cc  runtime-stats.hh  runtime-stats.i  stats-aggr.hh  stats-main.cc
apps/sepl/: .gitignore  Makefile.am  compile.py  declare.py  example_policy.py  example_principals.py  meta.json  meta.xml  policy.py  policystore.py  pysepl_enforcer.cc  pysepl_enforcer.hh  pysepl_stats.cc  pysepl_stats.hh  sepl_directory.py  sepl_enforcer.cc  sepl_enforcer.hh  sepl_enforcer.i  sepl_enforcer_python.cc  sepl_stats.cc  sepl_stats.hh  sepl_stats.i  test_policy.py  test_principals.py
apps/snackui/: Makefile.am  flow_table_page.py  helpui.py  meta.json  meta.xml  policyui.py  principal_list_pages.py  reportsui.py  search.py  settingsui.py  snackmonitors.py  snackui.py
apps/static_registration/: Makefile.am  meta.json  meta.xml  static_registration.py
apps/storage/: Makefile.am  StorageTableUtil.py  __init__.py  client.cc  client.hh  connection.cc  connection.hh  dht-storage.cc  dht-storage.hh  file-replication.cc  file-replication.hh  listener.hh  meta.json  meta.xml  pystorage.cc  pystorage_wrap.cc  pytransactional-storage.cc  pytransactional-storage.hh  pytransactional_storage.py  pytransactional_storage_wrap.cc  server.cc  server.hh  sha1.cc  sha1.hh  sqlite3-impl.cc  sqlite3-impl.hh  storage.cc  storage.i  storage.py  transactional-storage-blocking.cc  transactional-storage-blocking.hh  transactional-storage.cc  transactional-storage.hh  transactional-storage.i  transactional_storage.py
apps/storagews/: Makefile.am  base_storagews.py  meta.json  storage_schema.py  storagews.py  transactional_storagews.py
apps/switchconfig/: Makefile.am  meta.json  meta.xml  switchconfig.py
apps/user_event_log/: Makefile.am  UI_user_event_log.py  meta.json
apps/userauthportal/: Makefile.am  meta.json  meta.xml  userauthportal.py
apps/visibility/: Makefile.am  flow_cache.cc  flow_cache.hh  flow_cache_proxy.cc  flow_cache_proxy.hh  flow_info.hh  meta.json  meta.xml  pyflow_cache.i  static_ring_buf.hh  visibility_ws.py
apps/webservice_testui/: Makefile.am  meta.json  webservice_testui.py
(+353 files in other folders)
