include ../../Make.vars

NOX_RUNTIMEFILES = meta.json __init__.py hosttrackerws.py policyws.py protocolsws.py eventws.py principal_ws_test.py topograph.py noxgraph.py movable_css.js graphable.css node.gif logws.py

all-local: nox-runtimefiles-build
clean-local: nox-runtimefiles-clean
install-exec-hook: nox-install-local

